--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,22 @@
 [project]
-name = "code"
+name = "vocode"
 version = "0.1.0"
 description = "VectorOps Code"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "devtools>=0.12.2",
+    "pydantic>=2.11.7",
+    "pytest>=8.4.1",
+]
+
+[tool.uv]
+package = true
+
+[tool.mypy]
+plugins = ['pydantic.mypy']
+
+[dependency-groups]
+dev = [
+    "mypy>=1.17.1",
+]
