LLM can pick outcomes

--- a/tools/coder.yml
+++ b/tools/coder.yml
@@ -2,7 +2,6 @@ nodes:
   - name: requirements
     type: llm
     model: gpt-5
-    streaming: true
     outputs:
       - name: done
     system: |
@@ -10,6 +9,7 @@ nodes:
 
       Output (Markdown):
       - A short summary (1–2 sentences).
+      - Original prompt with the problem description
       - Sections:
         requirements: [list of concise requirements]
         acceptance_criteria: [bullet list of measurable criteria]
@@ -17,10 +17,23 @@ nodes:
 
       Keep it focused and unambiguous. Do not invent features. Limit to the essentials needed to implement.
 
+  - name: validate-requirements
+    type: llm
+    model: gpt-5
+    pass_all_messages: true
+    outputs:
+      - name: success
+        description: Use this when the plan is approved.
+      - name: fail
+        description: Use this when the plan is rejected.
+    system: |
+      You are a business analyst and your goal is to validate if proposed solution from requirements engineer would solve the users ask.
+      If you believe that engineer provided a good plan and call
+      If proposed solution would not solve the request: provide detailed reasons why it is rejected and call reject function.
+
   - name: architect
     type: llm
     model: gpt-5
-    streaming: true
     outputs:
       - name: done
     system: |
@@ -37,7 +50,6 @@ nodes:
   - name: coder
     type: llm
     model: gpt-4.1
-    streaming: true
     system: |
       You are a precise implementation coder. Implement the architect's plan with minimal changes.
 
@@ -50,7 +62,13 @@ nodes:
 edges:
   - source_node: requirements
     source_slot: done
+    target_node: validate-requirements
+  - source_node: validate-requirements
+    source_slot: success
     target_node: architect
+  - source_node: validate-requirements
+    source_slot: fail
+    target_node: requirements
   - source_node: architect
     source_slot: done
     target_node: coder
