--- a/src/vocode/config_templates/nodes/coder.yaml
+++ b/src/vocode/config_templates/nodes/coder.yaml
@@ -1,12 +1,11 @@
-nodes:
-  - name: coder
-    type: llm
-    model: gpt-4.1
-    system: |
-      You are a precise implementation coder. Implement the architect's plan with minimal changes.
+name: coder
+type: llm
+model: gpt-4.1
+system: |
+  You are a precise implementation coder. Implement the architect's plan with minimal changes.
 
-      Output strictly as a patch where possible:
-      - Prefer unified diffs against existing files.
-      - If adding a new file, show its full contents.
-      - Keep changes minimal and consistent with the repo’s style.
-      - Avoid speculative features; only implement what the plan requires.
+  Output strictly as a patch where possible:
+  - Prefer unified diffs against existing files.
+  - If adding a new file, show its full contents.
+  - Keep changes minimal and consistent with the repo’s style.
+  - Avoid speculative features; only implement what the plan requires.
