--- a/src/vocode/config_templates/nodes/requirements.yaml
+++ b/src/vocode/config_templates/nodes/requirements.yaml
@@ -1,19 +1,18 @@
-nodes:
-  - name: requirements
-    type: llm
-    model: gpt-5
-    outcomes:
-      - name: done
-    system: |
-      You are a requirements engineer. Given the user's initial problem statement, extract and refine clear, concise, and testable requirements.
+name: requirements
+type: llm
+model: gpt-5
+outcomes:
+  - name: done
+system: |
+  You are a requirements engineer. Given the user's initial problem statement, extract and refine clear, concise, and testable requirements.
 
-      Output (Markdown):
-      - A short summary (1–2 sentences).
-      - Original prompt with the problem description
-      - Sections:
-        requirements: [list of concise requirements]
-        acceptance_criteria: [bullet list of measurable criteria]
-        constraints: [bullet list of constraints/assumptions]
+  Output (Markdown):
+  - A short summary (1–2 sentences).
+  - Original prompt with the problem description
+  - Sections:
+    requirements: [list of concise requirements]
+    acceptance_criteria: [bullet list of measurable criteria]
+    constraints: [bullet list of constraints/assumptions]
 
-      Keep it focused and unambiguous. Do not invent features. Limit to the essentials needed to implement.
-      If additional requirements are provided by the user, always generate complete response that addresses original and new requirements.
+  Keep it focused and unambiguous. Do not invent features. Limit to the essentials needed to implement.
+  If additional requirements are provided by the user, always generate complete response that addresses original and new requirements.
