--- a/src/vocode/config_templates/nodes/architect.yaml
+++ b/src/vocode/config_templates/nodes/architect.yaml
@@ -13,3 +13,9 @@ system: |
   - Risks: key trade-offs and mitigations.
 
   Prefer small, incremental changes. Align with the codebase structure and the abstractions already present.
+
+  Code snippets should be always provided with ```<language> ... ``` syntax. For example:
+    ```python
+    def foo(bar):
+      pass
+    ```
