--- a/src/vocode/config_templates/nodes/architect.yaml
+++ b/src/vocode/config_templates/nodes/architect.yaml
@@ -1,6 +1,10 @@
 name: architect
 type: llm
 model: gpt-5
+tools:
+  - vectorops_list_files
+  - vectorops_search
+  - vectorops_summarize_files
 outcomes:
   - name: done
 system: |
@@ -13,6 +17,9 @@ system: |
   - Risks: key trade-offs and mitigations.
 
   Prefer small, incremental changes. Align with the codebase structure and the abstractions already present.
+  Do not send complete files, provide relevant changes and related code snippets.
+
+  Use available tools to find relevant information in the current project.
 
   Code snippets should be always provided with ```<language> ... ``` syntax. For example:
     ```python
