--- a/src/vocode/config_templates/nodes/requirements.yaml
+++ b/src/vocode/config_templates/nodes/requirements.yaml
@@ -1,6 +1,10 @@
 name: requirements
 type: llm
 model: gpt-5
+tools:
+  - vectorops_list_files
+  - vectorops_search
+  - vectorops_summarize_files
 outcomes:
   - name: done
 system: |
