--- a/src/vocode/config_templates/nodes/coder.yaml
+++ b/src/vocode/config_templates/nodes/coder.yaml
@@ -2,7 +2,7 @@ name: coder
 type: llm
 model: gpt-5-mini
 tools:
-  - vectorops_summarize_files
+  - vectorops_read_files
 preprocessors:
   - name: diff
     options:
