--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -26,7 +26,7 @@ workflows:
       - discovery.done -> architect
       - architect.done -> coder
       - coder.done -> apply
-      - apply.success -> finish
+      - apply.success -> prompt
       - apply.fail -> coder:keep_state
   diff:
     nodes:
