--- a/src/vocode/config_templates/nodes/discovery.yaml
+++ b/src/vocode/config_templates/nodes/discovery.yaml
@@ -1,6 +1,6 @@
 name: discovery
 type: llm
-model: gpt-5-mini
+model: openai/gpt-5-mini
 tools:
   - vectorops_list_files
   - vectorops_summarize_files
