--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pytest>=8.4.1",
     "pyyaml>=6.0.2",
+    "GitPython>=3.1.36",
     "structlog>=25.4.0",
     "json5>=0.9",
     "know @ git+https://github.com/VectorOps/know.git",
