V4A hardening, patch diff format

--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -1,6 +1,6 @@
 # Default Vocode configuration
 ui:
-  log_level: debug
+  #log_level: debug
 tools:
   - name: vectorops_read_files
     auto_approve: true
