--- a/src/vocode/config_templates/nodes/file_state.yaml
+++ b/src/vocode/config_templates/nodes/file_state.yaml
@@ -2,5 +2,6 @@ name: file_state
 type: file_state
 confirmation: auto
 message_mode: concatenate_final
+hide_final_output: true
 outcomes:
   - name: done
