--- a/src/vocode/config_templates/nodes/architect.yaml
+++ b/src/vocode/config_templates/nodes/architect.yaml
@@ -1,5 +1,5 @@
 variables:
-  LLM_ARCHITECT_MODEL: openai/gpt-5
+  LLM_ARCHITECT_MODEL: gpt-5
 name: architect
 type: llm
 model: ${LLM_ARCHITECT_MODEL}
