--- a/src/vocode/config_templates/nodes/coder.yaml
+++ b/src/vocode/config_templates/nodes/coder.yaml
@@ -1,10 +1,13 @@
+variables:
+  LLM_CODER_MODEL: gpt-5-mini
+  LLM_CODER_DIFF_FORMAT: v4a
 name: coder
 type: llm
-model: openai/gpt-5-mini
+model: ${LLM_CODER_MODEL}
 preprocessors:
   - name: diff
     options:
-      format: v4a
+      format: ${LLM_CODER_DIFF_FORMAT}
 outcomes:
   - name: done
 system: |
