--- a/src/vocode/config_templates/nodes/discovery.yaml
+++ b/src/vocode/config_templates/nodes/discovery.yaml
@@ -1,6 +1,8 @@
+variables:
+  LLM_DISCOVERY_MODEL: gpt-5-mini
 name: discovery
 type: llm
-model: openai/gpt-5-mini
+model: ${LLM_DISCOVERY_MODEL}
 tools:
   - vectorops_list_files
   - vectorops_summarize_files
